<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/text_home"/>

    <item
        android:id="@+id/categoryFragment"
        android:icon="@drawable/ic_category"
        android:title="@string/text_category"/>

    <item
        android:id="@+id/themeFragment"
        android:icon="@drawable/ic_theme"
        android:title="@string/text_theme"/>

    <item
        android:id="@+id/personalFragment"
        android:icon="@drawable/ic_personal"
        android:title="@string/text_personal"/>

    <item
        android:id="@+id/settingFragment"
        android:icon="@drawable/ic_setting"
        android:title="@string/text_setting"/>
</menu>
